@@ -1,3 +1,6 @@
+2004-09-21 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
+  * Test/CMakeLists.txt: update to follow gdcmData renamings.
+
 2004-09-17 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
   * ENH: added some utility method that builds a flat dictionnary
     holding all the Dicom entries contained in the recursive structure
